--- a/css/style.css
+++ b/css/style.css
@@ -582,6 +582,8 @@ h3 {
 	border-radius: 50%;
 	box-shadow: 0px 0px 3px 5px #fff; 
 	
+	-webkit-transition: all 0.5s; 
+	
 	transition: all 0.5s;
 }
 
@@ -610,7 +612,9 @@ h3 {
 	background: #fff;
 	border-radius: 2px;
 	
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	
+	        transform: rotate(-45deg);
 }
 
 .up-button a::after {
@@ -625,7 +629,9 @@ h3 {
 	background: #fff;
 	border-radius: 2px;
 	
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	
+	        transform: rotate(45deg);
 }
 
 /*--------------------------------------------------------------------------*/
