--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,11 @@
 	0% {
 		-webkit-transform: translateY(-127px);
 					 transform: translateY(-127px);
-		visibility: hidden;
-		opacity: 0;
 	}
 	
 	100% {
 		-webkit-transform: translateY(0);
 					 transform: translateY(0);
-		visibility: visible;
-		opacity: 1;
 	}
 							
 }
@@ -21,15 +17,11 @@
 	0% {
 		-webkit-transform: translateY(-127px);
 					 transform: translateY(-127px);
-		visibility: hidden;
-		opacity: 0;
 	}
 	
 	100% {
 		-webkit-transform: translateY(0);
 					 transform: translateY(0);
-		visibility: visible;
-		opacity: 1;
 	}
 							
 }
@@ -39,15 +31,11 @@
 	0% {
 		-webkit-transform: translateY(0);
 					 transform: translateY(0);
-		visibility: visible;
-		opacity: 1;
 	}
 	
 	100% {
 		-webkit-transform: translateY(-127px);
 					 transform: translateY(-127px);
-		visibility: hidden;
-		opacity: 0;
 	}
 							
 }
@@ -57,15 +45,11 @@
 	0% {
 		-webkit-transform: translateY(0);
 					 transform: translateY(0);
-		visibility: visible;
-		opacity: 1;
 	}
 	
 	100% {
 		-webkit-transform: translateY(-127px);
 					 transform: translateY(-127px);
-		visibility: hidden;
-		opacity: 0;
 	}
 							
 }
@@ -142,8 +126,6 @@ h2::after {
 h3 {
 	font-size: 1.5em;
 	letter-spacing: 2px;
-	
-	/*text-transform: uppercase;*/
 }
 
 .clearfix::after {
@@ -167,15 +149,15 @@ h3 {
 	-webkit-animation: menu-closed 0.6s ease-in-out;
 				 animation: menu-closed 0.6s ease-in-out;
 }
-
+/*
 .mobile-menu-show {
 	visibility: visible !important;
 	opacity: 1 !important;
 }
-
+*/
 .mobile-nav-btn-active {
 	position: absolute;
-	top: 20px !important;
+	/*top: 20px !important;*/
 	
 	box-shadow: 0 0 5px 2px #1ac27a;
 	
@@ -338,10 +320,6 @@ h3 {
 }
 
 .my-skills ul {
-	/*display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-around;*/
 	padding: 0;
 	
 	list-style: none;
@@ -351,7 +329,6 @@ h3 {
 	float: left;
 	width: 30%;
 	margin-right: 3%;
-	/*flex-basis: 30%;*/
 	margin-bottom: 3%;
 	padding: 20px;
 	box-sizing: border-box;
@@ -382,10 +359,6 @@ h3 {
 }
 
 .my-works ul {
-	/*display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: space-around;*/
 	margin: 0;
 	padding: 0;
 	
@@ -396,7 +369,6 @@ h3 {
 	float: left;
 	width: 30%;
 	margin-right: 3%;
-	/*flex-basis: 30%;*/
 	margin-bottom: 3%;
 	box-sizing: border-box;
 }
@@ -519,6 +491,8 @@ h3 {
 }
 
 .feedback {
+	position: relative;
+	
 	padding: 0 20%;
 	
 	text-align: center;
@@ -559,6 +533,7 @@ h3 {
 
 .feedback input[type="submit"] {
 	padding: 10px 20px;
+    margin-bottom: 40px;
 	
 	border-radius: 10px;
 	border: none;
@@ -576,6 +551,26 @@ h3 {
 	background: #fff;
 	color: #128d58;
 	box-shadow: inset 0 0 0px 3px #128d58;
+}
+
+.alert {
+	position: absolute;
+	bottom: -40px;
+	left: 0;
+	
+	width: 100%;
+}
+
+.alert-loading {
+    
+}
+
+.alert-success {
+    color: #1ac27a;
+}
+
+.alert-error {
+    color: red;
 }
 
 /*--------------------------------------------------------------------------*/
@@ -715,7 +710,6 @@ h3 {
 	.my-skills li {
 		width: 47%;
 		margin-right: 6%;
-		/*flex-basis: 40%;*/
 		
 		margin-bottom: 5%;
 	}
@@ -733,7 +727,6 @@ h3 {
 	.my-works li {
 		width: 47%;
 		margin-right: 6%;
-		/*flex-basis: 40%;*/
 		
 		margin-bottom: 7%;
 	}
@@ -844,6 +837,11 @@ h3 {
 	.feedback {
 		padding: 0 10%;
 	}
+	
+	.alert {
+		bottom: 0;
+	}
+	
 	
 	
 	
